# sidekick

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  LEARN.md  README.md  pyproject.toml  sidekick4dummies.md  start.sh  status.sh  stop.sh
archive/: README.md
archive/markdown/2026-02-08/: GITHELPER.md  HANDOFF.md  PLAN-frontend-simplification.md
config/: modes.yaml  settings.py
docs/: Executive_Overview.md
src/: __init__.py  main.py
src/api/: app.py
src/api/routes/: export.py  modes.py  sessions.py  websocket.py
src/audio/: buffer.py  capture.py  storage.py  vad.py
src/core/: datetime_utils.py  events.py  exceptions.py
src/sessions/: __init__.py  manager.py  models.py  repository.py
src/summarization/: __init__.py  anthropic_backend.py  base.py  manager.py  ollama_backend.py  openai_backend.py  prompts.py
src/transcription/: __init__.py  base.py  manager.py  whisper_api.py  whisper_local.py
web/: index.html  recordings.html
web/css/: styles.css
web/js/: app.js  audio.js  recordings.js  websocket.js
